--- a/TesteVTBSolutionsUm/Shared/NavMenu.razor
+++ b/TesteVTBSolutionsUm/Shared/NavMenu.razor
@@ -15,13 +15,28 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/lista">
+                <span class="oi oi-plus" aria-hidden="true"></span> Listar
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/consulta">
+                <span class="oi oi-plus" aria-hidden="true"></span> Consultar
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/criaroportunidade">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Criar
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/atualizaroportunidade">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Atualizar
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/deletaroportunidade">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Deletar
             </NavLink>
         </div>
     </nav>
