--- a/TesteVTBSolutionsUm/Pages/Index.razor
+++ b/TesteVTBSolutionsUm/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Olá, VTB Solutions!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Bem-vindo a solução do Teste para Desenvolvedor .NET.
