--- a/TesteVTBSolutionsUm/Shared/NavMenu.razor
+++ b/TesteVTBSolutionsUm/Shared/NavMenu.razor
@@ -16,27 +16,27 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/lista">
-                <span class="oi oi-plus" aria-hidden="true"></span> Listar
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Listar
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/consulta">
-                <span class="oi oi-plus" aria-hidden="true"></span> Consultar
+                <span class="oi oi-book" aria-hidden="true"></span> Consultar
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/criaroportunidade">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Criar
+            <NavLink class="nav-link" href="/cria">
+                <span class="oi oi-plus" aria-hidden="true"></span> Criar
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/atualizaroportunidade">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Atualizar
+            <NavLink class="nav-link" href="/atualiza">
+                <span class="oi oi-plus" aria-hidden="true"></span> Atualizar
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/deletaroportunidade">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Deletar
+            <NavLink class="nav-link" href="/deleta">
+                <span class="oi oi-book" aria-hidden="true"></span> Deletar
             </NavLink>
         </div>
     </nav>
