--- a/TesteVTBSolutionsUm/Pages/Deleta.razor
+++ b/TesteVTBSolutionsUm/Pages/Deleta.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Deleta a Oportunidade do Pipeline</PageTitle>
 
-<h3>Oportunidade do Pipeline</h3>
+<h3>Deletar Oportunidade do Pipeline</h3>
 
 <input type="text" @bind-value="@id" placeholder="Insira o Id de uma Oportunidade..." style="width: 400px">
 <button @onclick="@Delete">Deletar</button>
