--- a/TesteVTBSolutionsUm/Pages/Consulta.razor
+++ b/TesteVTBSolutionsUm/Pages/Consulta.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Consulta a Oportunidade do Pipeline</PageTitle>
 
-<h3>Oportunidade do Pipeline</h3>
+<h3>Consultar Oportunidade do Pipeline</h3>
 
 <input type="text" @bind-value="@id" placeholder="Insira o Id de uma Oportunidade..." style="width: 400px">
 <button @onclick="@GetResult">Consultar</button>
